--- a/2022.md
+++ b/2022.md
@@ -25,7 +25,6 @@
 - Anker PowerCore Fusion 5000
 - RAV Power RP-PC128
 
-
 ## Software
 
 ### Misc
@@ -51,7 +50,6 @@
 
 ## Tech Stacks
 
-### Languages & FW
 - TypeScript / JavaScript
 - React / Next
 - React Native / Expo
@@ -62,6 +60,7 @@
 
 - Freee
 - Money Forward ME
+- 1Password
 
 ## Clothing
 
