--- a/2022.md
+++ b/2022.md
@@ -1,27 +1,14 @@
 ## Hardware
 
-### Apple iPad Pro
-- 2018 Silver 11-inch 512GB
-- Model: MU1U2LL/A
+### Devices
+- Apple iPad Pro 2018 Silver 11-inch 512GB (MU1U2LL/A)
+- Apple Pencil2 (A2051)
+- Apple Watch 4 Nike+ 44m (MU6L2J/A)
+- Apple Air Pods Pro (A2084)
+- Apple iPhone XR (MT0G2J/A)
+- Apple Mac Book Pro 2020 / 13-inch, 2020, 2.3 GHz Quad-Core Intel Core i7 (MacBookPro16,2)
 
-### Apple Pencil 2
-- Model: A2051
-
-### Apple Watch 4 Nike+ 
-- 44m
-- Model: MU6L2J/A
-
-### Apple Air Pods Pro 
-- Model: A2084
-
-### Apple iPhone XR
-- Model: MT0G2J/A
-
-### Apple Mac Book Pro 2020
-- 13-inch, 2020, 2.3 GHz Quad-Core Intel Core i7
-- Model: MacBookPro16,2
-
-## Gears
+### Gears
 - Anker PowerCore Fusion 5000
 - RAV Power RP-PC128
 
