--- a/2022.md
+++ b/2022.md
@@ -51,11 +51,13 @@
 
 ## Clothing
 
-- UNIQLO
+- UNIQLO | ULTRA LIGHT DOWN Black
+- UNIQLO | BLOCKTECH Parka Black
 - GU
-- WORKMAN
-- montbell
-  - ZEO-LINE (Long T-shirt / Tights)
+- WORKMAN | 
+- montbell | ZEO-LINE T-shirt
+- montbell | ZEO-LINE Tights
+- montbell | Merino Wool Plus Palm Warmer (HEATHER CHARCOAL) (#1118578)
 
 ## Desk Environment
 
