--- a/2022.md
+++ b/2022.md
@@ -23,6 +23,7 @@
 ### Communication
 - Slack
 - Discord
+- Line
 
 ### Development
 - GitHub
@@ -35,6 +36,12 @@
 - Typora
 - Notion
 
+### Services
+
+- Freee
+- Money Forward ME
+- 1Password
+
 ## Tech Stacks
 
 - TypeScript / JavaScript
@@ -42,12 +49,6 @@
 - React Native / Expo
 - Elixir / Phoenix
 - Rust / ActixWeb / Diesel
-
-## Services
-
-- Freee
-- Money Forward ME
-- 1Password
 
 ## Clothing
 
