--- a/2022.md
+++ b/2022.md
@@ -11,6 +11,12 @@
 ### Gears
 - Anker PowerCore Fusion 5000
 - RAV Power RP-PC128
+- MOFT MINI Laptop Stand (for iPad)
+- Seneo | Foldable Wireless Charger
+
+### Relaxation
+- [GALOPAR Eye Warmer](https://www.amazon.co.jp/gp/product/B07TVR9977/ref=ppx_yo_dt_b_asin_title_o09_s00?ie=UTF8&psc=1)
+- [MYTREX EMS HEAT NECK](https://item.rakuten.co.jp/leapgrow/mt-p-ehn19w/?s-id=ph_pc_itemname)
 
 ## Software
 
@@ -42,6 +48,11 @@
 - Money Forward ME
 - 1Password
 
+## Stuffs
+- [Trecy](https://www.amazon.co.jp/gp/product/B004NYK0NQ/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1)
+- [ElfAnt Adjustable Portable Aluminum Alloy Laptop Stand](https://www.amazon.co.jp/gp/product/B086L35VML/ref=ppx_yo_dt_b_asin_title_o07_s00?ie=UTF8&psc=1)
+- [Tiger Thermos MMZ-A352KG, Mug Bottle, Graphite 350ml](https://www.amazon.co.jp/gp/product/B07W4TNKZN/ref=ppx_yo_dt_b_asin_title_o02_s00?ie=UTF8&psc=1)
+
 ## Tech Stacks
 
 - TypeScript / JavaScript
@@ -55,11 +66,11 @@
 - UNIQLO | ULTRA LIGHT DOWN Black
 - UNIQLO | BLOCKTECH Parka Black
 - GU
-- WORKMAN | 
+- WORKMAN | AEGIS DIALIGHT Worm Jacket (BEIGE)
 - montbell | ZEO-LINE T-shirt
 - montbell | ZEO-LINE Tights
 - montbell | Merino Wool Plus Palm Warmer (HEATHER CHARCOAL) (#1118578)
 
-## Desk Environment
+## Desk
 
-- Helinox TACTICAL SUNSET CHAIR BLACK (High-Back Chairs)
+- Helinox | TACTICAL SUNSET CHAIR BLACK (High-Back Chairs)
