--- a/2022.md
+++ b/2022.md
@@ -66,7 +66,7 @@
 - UNIQLO | ULTRA LIGHT DOWN Black
 - UNIQLO | BLOCKTECH Parka Black
 - GU
-- WORKMAN | AEGIS DIALIGHT Worm Jacket (BEIGE)
+- [WORKMAN | AEGIS DIALIGHT Worm Jacket (BEIGE)](https://workman.jp/shop/g/g2300068346231/)
 - montbell | ZEO-LINE T-shirt
 - montbell | ZEO-LINE Tights
 - montbell | Merino Wool Plus Palm Warmer (HEATHER CHARCOAL) (#1118578)
