--- a/2022.md
+++ b/2022.md
@@ -18,6 +18,15 @@
 - [GALOPAR Eye Warmer](https://www.amazon.co.jp/gp/product/B07TVR9977/ref=ppx_yo_dt_b_asin_title_o09_s00?ie=UTF8&psc=1)
 - [MYTREX EMS HEAT NECK](https://item.rakuten.co.jp/leapgrow/mt-p-ehn19w/?s-id=ph_pc_itemname)
 
+### Desk
+
+- Helinox | TACTICAL SUNSET CHAIR BLACK (High-Back Chairs)
+
+### Stuffs
+- [Trecy](https://www.amazon.co.jp/gp/product/B004NYK0NQ/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1)
+- [ElfAnt Adjustable Portable Aluminum Alloy Laptop Stand](https://www.amazon.co.jp/gp/product/B086L35VML/ref=ppx_yo_dt_b_asin_title_o07_s00?ie=UTF8&psc=1)
+- [Tiger Thermos MMZ-A352KG, Mug Bottle, Graphite 350ml](https://www.amazon.co.jp/gp/product/B07W4TNKZN/ref=ppx_yo_dt_b_asin_title_o02_s00?ie=UTF8&psc=1)
+
 ## Software
 
 ### Misc
@@ -48,11 +57,6 @@
 - Money Forward ME
 - 1Password
 
-## Stuffs
-- [Trecy](https://www.amazon.co.jp/gp/product/B004NYK0NQ/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1)
-- [ElfAnt Adjustable Portable Aluminum Alloy Laptop Stand](https://www.amazon.co.jp/gp/product/B086L35VML/ref=ppx_yo_dt_b_asin_title_o07_s00?ie=UTF8&psc=1)
-- [Tiger Thermos MMZ-A352KG, Mug Bottle, Graphite 350ml](https://www.amazon.co.jp/gp/product/B07W4TNKZN/ref=ppx_yo_dt_b_asin_title_o02_s00?ie=UTF8&psc=1)
-
 ## Tech Stacks
 
 - TypeScript / JavaScript
@@ -71,6 +75,3 @@
 - montbell | ZEO-LINE Tights
 - montbell | Merino Wool Plus Palm Warmer (HEATHER CHARCOAL) (#1118578)
 
-## Desk
-
-- Helinox | TACTICAL SUNSET CHAIR BLACK (High-Back Chairs)
