--- a/2022.md
+++ b/2022.md
@@ -9,9 +9,9 @@
 - Apple Mac Book Pro 2020 / 13-inch, 2020, 2.3 GHz Quad-Core Intel Core i7 (MacBookPro16,2)
 
 ### Gears
-- Anker PowerCore Fusion 5000
-- RAV Power RP-PC128
-- MOFT MINI Laptop Stand (for iPad)
+- [Anker | PowerCore Fusion 5000 (WHITE)](https://www.ankerjapan.com/products/a1621)
+- [RAV Power | RP-PC128](https://www.ravpower.jp/rp-pc128/)
+- [MOFT | MINI Laptop Stand (for iPad)](https://www.amazon.co.jp/MOFT-MINI%E3%83%8E%E3%83%BC%E3%83%88%E3%83%91%E3%82%BD%E3%82%B3%E3%83%B3%E3%82%B9%E3%82%BF%E3%83%B3%E3%83%89-%E8%BB%BD%E9%87%8F%E3%83%8E%E3%83%BC%E3%83%88%E3%83%91%E3%82%BD%E3%82%B3%E3%83%B3%E3%82%B9%E3%82%BF%E3%83%B3%E3%83%89-%E3%83%8E%E3%83%BC%E3%83%88%E3%83%91%E3%82%BD%E3%82%B3%E3%83%B3%E5%AF%BE%E5%BF%9C-%E6%9C%80%E5%A4%A715-6%E3%82%A4%E3%83%B3%E3%83%81/dp/B07W9KB65T/ref=asc_df_B07W9KB65T/?tag=&linkCode=df0&hvadid=342469099148&hvpos=&hvnetw=g&hvrand=17890984304424898223&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1028853&hvtargid=pla-810814982300&ref=&adgrpid=70649750564&th=1)
 - Seneo | Foldable Wireless Charger
 
 ### Relaxation
@@ -20,7 +20,7 @@
 
 ### Desk
 
-- Helinox | TACTICAL SUNSET CHAIR BLACK (High-Back Chairs)
+- [Helinox | TACTICAL SUNSET CHAIR BLACK (High-Back Chairs)](https://www.amazon.co.jp/-/en/Helinox-Tactical-Sunset-Chair-Black/dp/B0719BPNV5)
 
 ### Stuffs
 - [Trecy](https://www.amazon.co.jp/gp/product/B004NYK0NQ/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1)
