--- a/2022.md
+++ b/2022.md
@@ -15,17 +15,17 @@
 - Seneo | Foldable Wireless Charger
 
 ### Relaxation
-- [GALOPAR Eye Warmer](https://www.amazon.co.jp/gp/product/B07TVR9977/ref=ppx_yo_dt_b_asin_title_o09_s00?ie=UTF8&psc=1)
-- [MYTREX EMS HEAT NECK](https://item.rakuten.co.jp/leapgrow/mt-p-ehn19w/?s-id=ph_pc_itemname)
+- [GALOPAR | Eye Warmer](https://www.amazon.co.jp/gp/product/B07TVR9977)
+- [MYTREX | EMS HEAT NECK](https://item.rakuten.co.jp/leapgrow/mt-p-ehn19w/?s-id=ph_pc_itemname)
 
 ### Desk
 
 - [Helinox | TACTICAL SUNSET CHAIR BLACK (High-Back Chairs)](https://www.amazon.co.jp/-/en/Helinox-Tactical-Sunset-Chair-Black/dp/B0719BPNV5)
 
 ### Stuffs
-- [Trecy](https://www.amazon.co.jp/gp/product/B004NYK0NQ/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1)
-- [ElfAnt Adjustable Portable Aluminum Alloy Laptop Stand](https://www.amazon.co.jp/gp/product/B086L35VML/ref=ppx_yo_dt_b_asin_title_o07_s00?ie=UTF8&psc=1)
-- [Tiger Thermos MMZ-A352KG, Mug Bottle, Graphite 350ml](https://www.amazon.co.jp/gp/product/B07W4TNKZN/ref=ppx_yo_dt_b_asin_title_o02_s00?ie=UTF8&psc=1)
+- [Trecy | Display Cleaning Cloth](https://www.amazon.co.jp/gp/product/B004NYK0NQ)
+- [ElfAnt Adjustable Portable Aluminum Alloy Laptop Stand](https://www.amazon.co.jp/gp/product/B086L35VML)
+- [Tiger Thermos MMZ-A352KG, Mug Bottle, Graphite 350ml](https://www.amazon.co.jp/gp/product/B07W4TNKZN)
 
 ## Software
 
@@ -70,7 +70,7 @@
 - UNIQLO | ULTRA LIGHT DOWN Black
 - UNIQLO | BLOCKTECH Parka Black
 - GU
-- [WORKMAN | AEGIS DIALIGHT Worm Jacket (BEIGE)](https://workman.jp/shop/g/g2300068346231/)
+- [WORKMAN | AEGIS DIALIGHT Worm Jacket (BEIGE)(H260C)](https://workman.jp/shop/g/g2300068346231/)
 - montbell | ZEO-LINE T-shirt
 - montbell | ZEO-LINE Tights
 - montbell | Merino Wool Plus Palm Warmer (HEATHER CHARCOAL) (#1118578)
