--- a/2022.md
+++ b/2022.md
@@ -24,8 +24,8 @@
 
 ### Stuffs
 - [Trecy | Display Cleaning Cloth](https://www.amazon.co.jp/gp/product/B004NYK0NQ)
-- [ElfAnt Adjustable Portable Aluminum Alloy Laptop Stand](https://www.amazon.co.jp/gp/product/B086L35VML)
-- [Tiger Thermos MMZ-A352KG, Mug Bottle, Graphite 350ml](https://www.amazon.co.jp/gp/product/B07W4TNKZN)
+- [ElfAnt | Adjustable Portable Aluminum Alloy Laptop Stand](https://www.amazon.co.jp/gp/product/B086L35VML)
+- [Tiger | Thermos MMZ-A352KG, Mug Bottle, Graphite 350ml](https://www.amazon.co.jp/gp/product/B07W4TNKZN)
 
 ## Software
 
