--- a/2022.md
+++ b/2022.md
@@ -17,6 +17,7 @@
 ### Relaxation
 - [GALOPAR | Eye Warmer](https://www.amazon.co.jp/gp/product/B07TVR9977)
 - [MYTREX | EMS HEAT NECK](https://item.rakuten.co.jp/leapgrow/mt-p-ehn19w/?s-id=ph_pc_itemname)
+- [Azuki no Chikara](https://www.kobayashi.co.jp/brand/azuchika/)
 
 ### Desk
 
@@ -26,6 +27,11 @@
 - [Trecy | Display Cleaning Cloth](https://www.amazon.co.jp/gp/product/B004NYK0NQ)
 - [ElfAnt | Adjustable Portable Aluminum Alloy Laptop Stand](https://www.amazon.co.jp/gp/product/B086L35VML)
 - [Tiger | Thermos MMZ-A352KG, Mug Bottle, Graphite 350ml](https://www.amazon.co.jp/gp/product/B07W4TNKZN)
+- [iface | First Class iPhone case (WHITE)](https://jp.iface.com/tech/categories/case/firstclass)
+- [abrAsus | Small Wallet](https://srcc.store/products/abrasus-small-wallet)
+- [U-DAY | Wind Resistance／Black Watch Mini](http://www.because-jp.com/u-day/D-060282/)
+- [7-Eleven | Automatic Foldable Umbrella 55cm](https://www.sej.co.jp/products/a/item/760575/)
+
 
 ## Software
 
@@ -72,6 +78,7 @@
 - UNIQLO | BLOCKTECH Parka Black
 - GU
 - [WORKMAN | AEGIS DIALIGHT Worm Jacket (BEIGE)(H260C)](https://workman.jp/shop/g/g2300068346231/)
+- [WORKMAN | Active Hike (Black) (FC140)](https://workman.jp/shop/g/g2300053567054/)
 - [montbell | ZEO-LINE Round Neck Shirt](https://en.montbell.jp/products/goods/disp.php?product_id=1107486)
 - [montbell | ZEO-LINE Tight](https://en.montbell.jp/products/goods/disp.php?product_id=1107493)
 - [montbell | Merino Wool Plus Palm Warmer (HEATHER CHARCOAL) (#1118578)](https://en.montbell.jp/products/goods/disp.php?product_id=1118578)
