--- a/2022.md
+++ b/2022.md
@@ -1,13 +1,17 @@
 ## Hardware
 
 ### Devices
-- Apple iPad Pro 2018 Silver 11-inch 512GB (MU1U2LL/A)
-- Apple Pencil2 (A2051)
-- Apple Watch 4 Nike+ 44m (MU6L2J/A)
-- Apple Air Pods Pro (A2084)
-- Apple iPhone XR (MT0G2J/A)
-- Apple Mac Book Pro 2020 / 13-inch, 2020, 2.3 GHz Quad-Core Intel Core i7 (MacBookPro16,2)
+- Apple | iPad Pro 2018 Gen1 Silver 11-inch 512GB (MU1U2LL/A)
+- Apple | Pencil2 (A2051)
+- Apple | Watch 4 Nike+ 44m (MU6L2J/A)
+- Apple | Air Pods Pro (A2084)
+- Apple | iPhone XR (MT0G2J/A)
+- Apple | Mac Book Pro 2020 / 13-inch, 2020, 2.3 GHz Quad-Core Intel Core i7 (MacBookPro16,2)
 - [Shure | SE215SPE-A](https://www.amazon.co.jp/dp/B00A16BT4E)
+
+### Device Accessories
+- [iface | First Class iPhone case (WHITE)](https://jp.iface.com/tech/categories/case/firstclass)
+- [Apple | Smart Keyboard Folio (for 11-inch for iPad Pro) - US (MU8G2LL/A)](https://www.amazon.com/Apple-Smart-Keyboard-11-inch-English/dp/B07JZYSTNR?th=1)
 
 ### Power & Charger
 - [Anker | PowerCore Fusion 5000 (WHITE)](https://www.ankerjapan.com/products/a1621)
@@ -25,11 +29,8 @@
 - [MOFT | MINI Laptop Stand (for iPad)](https://www.amazon.co.jp/MOFT-MINI%E3%83%8E%E3%83%BC%E3%83%88%E3%83%91%E3%82%BD%E3%82%B3%E3%83%B3%E3%82%B9%E3%82%BF%E3%83%B3%E3%83%89-%E8%BB%BD%E9%87%8F%E3%83%8E%E3%83%BC%E3%83%88%E3%83%91%E3%82%BD%E3%82%B3%E3%83%B3%E3%82%B9%E3%82%BF%E3%83%B3%E3%83%89-%E3%83%8E%E3%83%BC%E3%83%88%E3%83%91%E3%82%BD%E3%82%B3%E3%83%B3%E5%AF%BE%E5%BF%9C-%E6%9C%80%E5%A4%A715-6%E3%82%A4%E3%83%B3%E3%83%81/dp/B07W9KB65T/ref=asc_df_B07W9KB65T/?tag=&linkCode=df0&hvadid=342469099148&hvpos=&hvnetw=g&hvrand=17890984304424898223&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=1028853&hvtargid=pla-810814982300&ref=&adgrpid=70649750564&th=1)
 - [ElfAnt | Adjustable Portable Aluminum Alloy Laptop Stand](https://www.amazon.co.jp/gp/product/B086L35VML)
 
-### Stuffs
-- [Trecy | Display Cleaning Cloth](https://www.amazon.co.jp/gp/product/B004NYK0NQ)
-- [iface | First Class iPhone case (WHITE)](https://jp.iface.com/tech/categories/case/firstclass)
-
 ### Life
+- [Trecy | Display Cleaning Cloth](https://www.amazon.co.jp/gp/product/B004NYK0NQ)
 - [abrAsus | Small Wallet](https://srcc.store/products/abrasus-small-wallet)
 - [Tiger | Thermos MMZ-A352KG, Mug Bottle, Graphite 350ml](https://www.amazon.co.jp/gp/product/B07W4TNKZN)
 - [U-DAY | Wind Resistance／Black Watch Mini](http://www.because-jp.com/u-day/D-060282/)
