--- a/2022.md
+++ b/2022.md
@@ -1,6 +1,7 @@
 ## Hardware
 
 ### Devices
+
 - Apple | iPad Pro 2018 Gen1 Silver 11-inch 512GB (MU1U2LL/A)
 - Apple | Pencil2 (A2051)
 - Apple | Watch 4 Nike+ 44m (MU6L2J/A)
@@ -10,18 +11,21 @@
 - [Shure | SE215SPE-A](https://www.amazon.co.jp/dp/B00A16BT4E)
 
 ### Device Accessories
+
 - [iface | First Class iPhone case (WHITE)](https://jp.iface.com/tech/categories/case/firstclass)
 - [Apple | Smart Keyboard Folio (for 11-inch for iPad Pro) - US (MU8G2LL/A)](https://www.amazon.com/Apple-Smart-Keyboard-11-inch-English/dp/B07JZYSTNR?th=1)
 
 ### Power & Charger
+
 - [Anker | PowerCore Fusion 5000 (WHITE)](https://www.ankerjapan.com/products/a1621)
 - [RAV Power | RP-PC128](https://www.ravpower.jp/rp-pc128/)
 - Seneo | Foldable Wireless Charger
 
 ### Relaxation
+
 - [GALOPAR | Eye Warmer](https://www.amazon.co.jp/gp/product/B07TVR9977)
 - [MYTREX | EMS HEAT NECK](https://item.rakuten.co.jp/leapgrow/mt-p-ehn19w/?s-id=ph_pc_itemname)
-- [Azuki no Chikara](https://www.kobayashi.co.jp/brand/azuchika/)
+- [Kiribai | Azuki no Chikara](https://www.kobayashi.co.jp/brand/azuchika/)
 
 ### Desk
 
@@ -30,6 +34,7 @@
 - [ElfAnt | Adjustable Portable Aluminum Alloy Laptop Stand](https://www.amazon.co.jp/gp/product/B086L35VML)
 
 ### Life
+
 - [Trecy | Display Cleaning Cloth](https://www.amazon.co.jp/gp/product/B004NYK0NQ)
 - [abrAsus | Small Wallet](https://srcc.store/products/abrasus-small-wallet)
 - [Tiger | Thermos MMZ-A352KG, Mug Bottle, Graphite 350ml](https://www.amazon.co.jp/gp/product/B07W4TNKZN)
@@ -39,6 +44,7 @@
 ## Software
 
 ### Misc
+
 - Google Chrome
 - Brave
 - Todoist
@@ -46,17 +52,20 @@
 - [Alfred](https://www.alfredapp.com/)
 
 ### Communication
+
 - Slack
 - Discord
 - Line
 
 ### Development
+
 - GitHub
 - GitLab
 - VS Code
 - iTerm2
 
 ### Note
+
 - Obsidian
 - Typora
 - Notion
@@ -85,4 +94,3 @@
 - [montbell | ZEO-LINE Round Neck Shirt](https://en.montbell.jp/products/goods/disp.php?product_id=1107486)
 - [montbell | ZEO-LINE Tight](https://en.montbell.jp/products/goods/disp.php?product_id=1107493)
 - [montbell | Merino Wool Plus Palm Warmer (HEATHER CHARCOAL) (#1118578)](https://en.montbell.jp/products/goods/disp.php?product_id=1118578)
-
