--- a/2022.md
+++ b/2022.md
@@ -45,44 +45,44 @@
 
 ### Misc
 
-- Google Chrome
-- Brave
-- Todoist
-- Authy
+- [Google Chrome](https://www.google.com/chrome/)
+- [Brave](https://brave.com/)
+- [Todoist](https://todoist.com)
+- [Authy](https://authy.com/)
 - [Alfred](https://www.alfredapp.com/)
 
 ### Communication
 
-- Slack
-- Discord
-- Line
+- [Slack](https://slack.com/)
+- [Discord](https://discord.com/)
+- [LINE](https://line.me/)
 
 ### Development
 
-- GitHub
-- GitLab
-- VS Code
-- iTerm2
+- [GitHub](https://github.com)
+- [GitLab](https://gitlab.com/)
+- [VS Code](https://code.visualstudio.com/)
+- [iTerm2](https://iterm2.com/)
 
 ### Note
 
-- Obsidian
-- Typora
-- Notion
+- [Obsidian](https://obsidian.md/)
+- [Typora](https://typora.io/)
+- [Notion](https://www.notion.so/)
 
 ### Services
 
-- Freee
-- Money Forward ME
-- 1Password
+- [Freee](https://www.freee.co.jp/)
+- [Money Forward ME](https://moneyforward.com/)
+- [1Password](https://1password.com/)
 
 ## Tech Stacks
 
-- TypeScript / JavaScript
-- React / Next
-- React Native / Expo
-- Elixir / Phoenix
-- Rust / ActixWeb / Diesel
+- [TypeScript](https://www.typescriptlang.org/) / JavaScript
+- [React](https://reactjs.org/) / [Next](https://nextjs.org/)
+- [React Native](https://reactnative.dev/) / [Expo](https://expo.dev/)
+- [Elixir](https://elixir-lang.org/) / [Phoenix](https://www.phoenixframework.org/)
+- [Rust](https://www.rust-lang.org/) / [ActixWeb](https://actix.rs/)
 
 ## Clothing
 
