--- a/2023.md
+++ b/2023.md
@@ -5,3 +5,5 @@ TBD
 - [Anker | 321 Power Bank (PowerCore 5200)(White)](https://www.ankerjapan.com/products/a1112)
 
 
+- nvm => [fnm](https://github.com/Schniz/fnm)
+- iTerm2 => starship?
