--- a/2023.md
+++ b/2023.md
@@ -1,5 +1,5 @@
 TBD
-- Insta360 X3
+- Insta360 X3(CINSAAQ/B)
 - (new)Mac Book Pro M2?
 - (new)iPhone 
 - [Anker | 321 Power Bank (PowerCore 5200)(White)](https://www.ankerjapan.com/products/a1112)
