--- a/2023.md
+++ b/2023.md
@@ -4,6 +4,11 @@ TBD
 - (new)iPhone 
 - [Anker | 321 Power Bank (PowerCore 5200)(White)](https://www.ankerjapan.com/products/a1112)
 
+## Desk
+- Dell S2421HS
+- Quntis L206
+- SANODESK E150
 
+## Software
 - nvm => [fnm](https://github.com/Schniz/fnm)
 - iTerm2 => starship?
